--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('NumerosPrimos', 'c',
   version : '0.1',
-  default_options : ['warning_level=3'])
+  default_options : ['warning_level=3', 'b_sanitize=address'])
 
 executable('NumerosPrimos',
            'Calculadora-primos.c',
