--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('NumerosPrimos', 'c',
   version : '1.3',
-  default_options : ['warning_level=3'])
+  default_options : ['warning_level=everything'])
 
 executable('NumerosPrimos',
            'Calculadora-primos.c',
